--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,31 @@
+.holder{
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:space-between;
+}
+.holder-1{
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:space-between;
+}
+.item-1{
+	background-color:green;
+	width:100px;
+	height:100px;
+	font-size:40px;
+	/* border:1px solid white; */
+}
+.item-2{
+	background-color:red;
+	width:100px;
+	height:100px;
+	font-size:40px;
+}
+.item-3{
+	background-color:blue;
+	width:100px;
+	height:100px;
+	font-size:40px;
+}
 
 /* Your CSS Code here. */
